@startuml Architecture
skinparam {
    monochrome true
    padding 1
}



class Camera{
    + Point Postion
    + Matrix Rotation
    + Number FOV
    + Matrix projectToScreen(Matrix)
}

class World{
    + Camera ICamera
    + Poly[] Polys
    + MultiPoly[] MultiPolys
    + DrawObject getDrawObjectElementsFromWorld()
}

class Point{
    + Matrix 4x1
    頂点として4x1の行列を使う
}

class Matrix{
    + Number row
    + Number col
    + constructor(row,col)
    + set(Number[])
    + getElement(i,j)
    + setElement(i,j)
    + getByIndex(index)
    + setByIndex(index,value)
    __Static method__
    {static} - Matrix log(Matrix)
    {static} -Matrix makeNorm(vec)
    {static} -Matrix makeTranslation(x,y,z)
    {static} -Matrix add(Matrix,Matrix)
    {static} -Matrix Invert(Matrix)
    {static} -Matrix multiply(multiplier: Matrix, target: Matrix)
    {static} -Matrix makeInverse(mx:Matrix)
    {static} -Matrix dot(vec1: Matrix(4,1), vec2: Matrix(4,1))
}
class Vector{}
class Vector2{}
class Vector3{}

class Drawer{
    + Drawer(app, currentDoc, constants)
    + void Draw(DrawObject)
}

class DrawObject{
    + DrawObjectElement[]
}
class DrawObjectElement{
}
class MultiPoly{
    + Poly[] polys
    + Poly[] getPolys()
}
class Poly{
    + Point[] verts
    + Point origin
    + Point[] getVertsWorld(void)
}

Vector --|> Matrix
Vector2 --|> Vector
Vector3 --|> Vector
MultiPoly *--Poly
World *-- Camera
World *-- MultiPoly

Matrix <|-- Point
Poly *--Point
DrawObject *-- DrawObjectElement
DrawObjectElement <- World
Drawer <- DrawObject
@enduml